--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -4,6 +4,7 @@
   margin: 0 auto;
   gap: 50px;
 }
+
 .leftSide {
   display: flex;
   flex-direction: column;
@@ -14,20 +15,50 @@
   max-width: 600px;
   max-width: 400px;
 }
+
+.textWrapper .textHeader h1 {
+  text-transform: uppercase;
+  background-image: linear-gradient(-225deg,
+      #006994 0%,
+      #7bd5f5 29%,
+      #1ca7ec 67%,
+      #787ff6 100%);
+  background-size: auto auto;
+  background-clip: border-box;
+  background-size: 200% auto;
+  color: #fff;
+  background-clip: text;
+  text-fill-color: transparent;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: textclip 2s linear infinite;
+  display: inline-block;
+}
+
+@keyframes textclip {
+  to {
+    background-position: 200% center;
+  }
+}
+
 .textHeader {
   max-width: 400px;
 }
+
 .textWrapper .textHeader h1 {
   font-size: 46px;
   margin-bottom: 15px;
 }
+
 .textWrapper .textHeader h3 {
   margin-bottom: 15px;
 }
+
 .textWrapper .textHeader p {
   margin-bottom: 100px;
 }
-.nav p::before {
+
+.nav a::before {
   content: "";
   display: inline-block;
   width: 30px;
@@ -36,74 +67,93 @@
   margin-right: 5px;
   transform: translateY(-5px);
 }
-.nav p {
+
+.nav a {
   font-size: 16px;
   font-weight: 600;
   margin-bottom: 20px;
+  text-decoration: none;
+  display: block;
+  color: #808da2;
 }
+
 .active {
   color: #fff !important;
 }
+
 .active::before {
   background-color: #fff !important;
   width: 60px !important;
 }
+
 .linkIcon {
   display: flex;
   gap: 20px;
   margin-bottom: 70px;
 }
+
 .rightSide {
-  height: 3000px;
   max-width: 600px;
   margin-top: 100px;
 }
+
 .about {
   margin-bottom: 50px;
   padding: 15px;
 }
+
 .about p {
   margin-bottom: 20px;
 }
+
 .item {
   display: flex;
   gap: 20px;
   padding: 15px;
   margin-bottom: 20px;
 }
+
 .item:last-child {
   margin-bottom: 100px;
 }
+
 .itemLeft {
-  flex: 1 1 25%;
+  flex: 0 0 25%;
 }
+
 .itemRight {
   display: flex;
   flex-direction: column;
   gap: 20px;
 }
+
 .item:hover {
   background-color: rgba(148, 163, 184, 0.1);
   border-radius: 10px;
   border: none;
 }
+
 .item:hover .itemRightTitle h3 {
   color: #47b3a7;
 }
+
 .itemRightTitle {
   display: flex;
   align-items: center;
   gap: 10px;
 }
+
 .itemRightTitle span svg {
   width: 14px;
   height: 14px;
 }
+
 .item:hover .itemRightTitle span svg {
   transform: translate(5px, -5px);
   transition: transform 0.2s;
   stroke: #47b3a7;
 }
+
 .itemRight p {
   word-break: break-all;
 }
