--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -18,11 +18,13 @@
 
 .textWrapper .textHeader h1 {
   text-transform: uppercase;
-  background-image: linear-gradient(-225deg,
-      #006994 0%,
-      #7bd5f5 29%,
-      #1ca7ec 67%,
-      #787ff6 100%);
+  background-image: linear-gradient(
+    -225deg,
+    #006994 0%,
+    #7bd5f5 29%,
+    #1ca7ec 67%,
+    #787ff6 100%
+  );
   background-size: auto auto;
   background-clip: border-box;
   background-size: 200% auto;
@@ -157,7 +159,73 @@
 .itemRight p {
   word-break: break-all;
 }
-
+.detailProject {
+  position: fixed;
+  top: 0;
+  right: 0;
+  height: 100dvh;
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 16px 0 0 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  width: 400px;
+  padding: 15px;
+  animation: slideIn 0.3s ease-in-out;
+}
+.detailProject .imageWrapper {
+  width: 100%;
+  height: 200px;
+  border-radius: 10px;
+  margin-bottom: 50px;
+}
+.detailProject .imageWrapper img {
+  width: 100%;
+  height: 100%;
+  border-radius: inherit;
+}
+.detailProject .title {
+  color: white;
+  margin-top: 15px;
+}
+.detailProject .link {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  margin-top: 15px;
+}
+.detailProject .link span svg {
+  width: 30px;
+  height: 30px;
+  color: white;
+}
+.detailProject .link a {
+  color: #47b3a7;
+}
+.detailProject p {
+  color: white;
+}
+.detailProject .close {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+}
+.detailProject .close svg {
+  width: 30px;
+  height: 30px;
+  color: white;
+  margin-bottom: 15px;
+}
+@keyframes slideIn {
+  0% {
+    transform: translateX(400px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
 @media (max-width: 1200px) {
   .main {
     flex-direction: column;
@@ -197,7 +265,6 @@
   }
 
   .linkIcon {
-
     margin-top: 10px;
   }
 
