--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -11,11 +11,13 @@
   justify-content: space-between;
   height: 800px;
   position: sticky;
-  top: 100px;
+  top: 0;
   max-width: 600px;
   max-width: 400px;
 }
-
+.textWrapper {
+  margin-top: 100px;
+}
 .textWrapper .textHeader h1 {
   text-transform: uppercase;
   background-image: linear-gradient(
@@ -156,7 +158,7 @@
 }
 
 .itemRight p span {
-  color: white;
+  color: #47b3a7;
   display: inline;
 }
 .detailProject {
@@ -172,7 +174,10 @@
   border: 1px solid rgba(255, 255, 255, 0.2);
   width: 400px;
   padding: 15px;
-  animation: slideIn 0.3s ease-in-out;
+  animation: slideIn 0.2s cubic-bezier(0.65, 0.64, 1, 1.03);
+}
+.inActive {
+  animation: slideOut 0.2s cubic-bezier(0.65, 0.64, 1, 1.03);
 }
 .detailProject .imageWrapper {
   width: 100%;
@@ -204,13 +209,14 @@
   color: #47b3a7;
 }
 .detailProject p {
-  color: white;
+  color: #47b3a7;
+  margin-top: 10px;
 }
 .detailProject .close {
   width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: end;
+  align-items: flex-end;
 }
 .detailProject .close svg {
   width: 30px;
@@ -224,6 +230,14 @@
   }
   100% {
     transform: translateX(0);
+  }
+}
+@keyframes slideOut {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(400px);
   }
 }
 @media (max-width: 1200px) {
