--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -46,3 +46,17 @@ p {
   text-decoration: none;
   border-radius: 5px;
 }
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  background-color: #808da2;
+}
+::-webkit-scrollbar {
+  width: 8px;
+  background-color: #808da2;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #47b3a7;
+}
